tests/property/InterfaceTest/pkg/List.java
/* This file is part of the Property Checker.
 * Copyright (c) 2021 -- present. Property Checker developers.
 *
 * This program is free software; you can redistribute it and/or modify it
 * under the terms of the GNU General Public License version 2 only, as
 * published by the Free Software Foundation.
 *
 * This code is distributed in the hope that it will be useful, but WITHOUT
 * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
 * version 2 for more details.
 *
 * You should have received a copy of the GNU General Public License version
 * 2 along with this work; if not, write to the Free Software Foundation,
 * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 */
package pkg;

import edu.kit.kastel.property.subchecker.lattice.qual.*;
import org.checkerframework.checker.nullness.qual.*;

public interface List {

    int size();
    Object head(@Length(min="1", max="2147483647") List this);
}

class Client {
    
    public void foo(@Length(min="1", max="2147483647") List l) {
        l.head();
    }
    
    public void bar(@Length(min="0", max="2147483647") List l) {
    	// :: error: method.invocation.invalid
        l.head();
    }
}
